# recgen

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pixi.toml  pyproject.toml  recgen_coarse.py  recgen_fastapi.py
examples/: intrinsics.yaml
notebooks/: example.ipynb
recgen_inference/: __init__.py  _result.py  build_recgen.py  inference.py  preprocessing.py  utils.py
recgen_inference/recgen_modules/: __init__.py
recgen_inference/recgen_modules/models/: __init__.py  sparse_structure_pose_flow.py  structured_latent_cond_flow.py
recgen_inference/recgen_modules/models/structured_latent_vae/: __init__.py
recgen_inference/recgen_modules/modules/attention/: __init__.py  full_attn.py  modules.py
recgen_inference/recgen_modules/modules/sparse/: __init__.py  basic.py
recgen_inference/recgen_modules/modules/sparse/attention/: full_attn.py
recgen_inference/recgen_modules/modules/transformer/: modulated.py
recgen_inference/recgen_modules/pipelines/: __init__.py  recgen_pipeline.py
recgen_inference/recgen_modules/pipelines/samplers/: classifier_free_guidance_mixin.py  flow_euler.py  guidance_interval_mixin.py
recgen_inference/recgen_modules/renderers/: gaussian_render.py
recgen_inference/recgen_modules/representations/gaussian/: gaussian_model.py
recgen_inference/recgen_modules/representations/mesh/flexicubes/: flexicubes.py
recgen_inference/recgen_modules/utils/: pose_utils.py  postprocessing_utils.py  render_utils.py
scripts/: run_inference.py  setup_cuda.sh
tests/: test_build_recgen.py  test_smoke.py
